fix spectacle documentation
update screenshots to new gui
fix gui terms

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -237,9 +237,9 @@
 				</mediaobject>
 			<variablelist>
 				<varlistentry>
-					<term><guilabel>Remember last used save mode</guilabel></term>
+					<term><guilabel>Remember last used Save mode</guilabel></term>
 					<listitem>
-						<para>The default behavior of the save button is to <guibutton>Save &amp; Exit</guibutton>. Enable this option to make the button remember the last used save command so you don't need to open the dropdown menu to access it. This is useful if you want to take multiple screenshots and use Save As to give them unique names or save them to different places.</para>
+						<para>The default behavior of the save button is to <guibutton>Save &amp; Exit</guibutton>. Enable this option to make the button remember the last used save command so you don't need to open the dropdown menu to access it. This is useful if you want to take multiple screenshots and use <guimenuitem>Save As...</guimenuitem> to give them unique names or save them to different places.</para>
 					</listitem>
 				</varlistentry>
 				<varlistentry>
@@ -268,7 +268,7 @@
 			<title>Save</title>
 			<para>When you use the <guilabel>Save &amp; Exit</guilabel> or the <guilabel>Save</guilabel> functions, &spectacle; saves the image with a default filename, in your Pictures folder under your home folder. The default filename includes the date and time when the image was taken.</para>
 
-			<para>The <guilabel>Save Options</guilabel> page allows you to set the default save location and filename. Clicking this option brings up a dialog box like the following:
+			<para>The <guilabel>Save</guilabel> page allows you to set the default save location and filename. Clicking this option brings up a dialog box like the following:
 				<mediaobject>
 					<imageobject>
 						<imagedata fileref="SaveOptions.png" format="PNG"/>
@@ -280,9 +280,9 @@
 			</para>
 			<variablelist>
 				<varlistentry>
-					<term><guilabel>Default Save Directory</guilabel></term>
+					<term><guilabel>Default Save Location</guilabel></term>
 					<listitem>
-                    <para>In the <guilabel>Location</guilabel> text box set the directory where you'd like to save your screenshots when you press <guibutton>Save</guibutton> or <guibutton>Save &amp; Exit</guibutton>.</para>
+                    <para>In the <guilabel>Location</guilabel> text box set the folder where you'd like to save your screenshots when you press <guibutton>Save</guibutton> or <guibutton>Save &amp; Exit</guibutton>.</para>
 					</listitem>
 				</varlistentry>
 				<varlistentry>
